# d2dphy

./: .gitignore  CITATION.cff  Dockerfile  Makefile  README.md
.github/workflows/: ci-cd.yml
tools/log-analyzer/: .gitignore  Cargo.toml  LICENCE.md  README.md  build.rs
tools/log-analyzer/bindings/: .gitignore  libphysec_bindgen_headers.h  libsts_bindgen_headers.h  physec_additional.rs
tools/log-analyzer/bindings/libsts/: .gitignore  makefile.bindings
tools/log-analyzer/bindings/libsts/include/: .gitignore  defs.h  externs.h
tools/log-analyzer/bindings/libsts/src/: .gitignore  approximateEntropy.c  blockFrequency.c  cusum.c  discreteFourierTransform.c  externs.c  frequency.c  linearComplexity.c  longestRunOfOnes.c  nonOverlappingTemplateMatchings.c
tools/log-analyzer/scripts/: .gitignore  clippy-watch.sh  generate-libphysec-bindings.sh  generate-libsts-bindings.sh  run-watch.sh  test-watch.sh
tools/log-analyzer/src/: .gitignore  extractor.rs  key_generations_metadatas.rs  main.rs  rng_metadatas.rs
tools/log-analyzer/src/bindings/: .gitignore  mod.rs
tools/stm32-cli/: Cargo.toml  README.md  build.rs  generate-rust-bindings.sh
tools/stm32-cli/config_files/: master_differential.toml  master_exp1.toml  master_flora.toml  master_mb_excursion.toml  master_sb_fe_dig_locks.toml  slave_differential.toml  slave_exp1.toml  slave_flora.toml  slave_mb_excursion.toml  slave_sb_fe_dig_locks.toml
tools/stm32-cli/csis_samples/: csi_parse.py  notes.md
tools/stm32-cli/src/: config_parse.rs  main.rs  menus.rs  utils.rs
tools/stm32-cli/src/packets/: mod.rs
tools/stm32-cli/src/packets/config/: config_csis.rs  config_keygen.rs  config_radio.rs  config_telemetry.rs  mod.rs
tools/stm32-cli/src/packets/telemetry/: mod.rs  telemetry_csis.rs  telemetry_keygen_conf.rs  telemetry_keygen_info.rs  telemetry_logging.rs  ù!
tools/stm32-cli/src/physec_bindings/: .gitignore  mod.rs
tools/stm32-flash/: Cargo.toml
tools/stm32-flash/src/: main.bak  main.bk  main.rs
(+76 files in other folders)
