[package]
name = "stm32-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.9", features = ["derive"] }
console = "0.15.8"
csv = "1.3.0"
ctrlc = { version = "3.4.4", features = ["termination"] }
dialoguer = { version = "0.11.0", features = ["fuzzy-matcher", "fuzzy-select"] }
lazy_static = "1.5.0"
nom = "7.1.3"
probe-rs = "0.24.0"
serde = { version = "1.0.204", features = ["derive"] }
serde-value = "0.7.0"
serialport = "4.4.0"
toml = "0.8.16"
udev = "0.9.0"

[build-dependencies]
bindgen = "0.72"
regex = "1.0"
