[package]
name = "stm32-flash"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
console = "0.15.8"
dialoguer = { version = "0.11.0", features = ["fuzzy-matcher", "fuzzy-select"] }
indicatif = "0.17.8"
lock_api = "0.4.12"
probe-rs = { version = "0.24.0", features = ["gdb-server", "hexdump", "test"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
